BAEL-4795: Fix readAllBytes()